@@ -269,7 +269,16 @@ Allows you to perform basic read and write operations on a standard serial
 interface using the L<RPi::Serial> library. See that documentation for full
 usage information.
 
-    my $dev  = "/dev/ttyAMA0";
+=head2 Note
+
+Bluetooth on the Pi overlays the serial pins (14, 15) on the Pi. To use
+serial, you must disable bluetooth in the C</boot/config.txt> file:
+
+    dtoverlay=pi3-disable-bt-overlay
+
+=head2 Usage
+
+    my $dev  = "/dev/ttyS0";
     my $baud = 115200;
 
     my $ser = $pi->serial($dev, $baud);
