@@ -10,6 +10,7 @@ Revision history for Perl extension RPi::WiringPi.
         - add blurb in FAQ and POD about lowering I2C bus speed if using I2C
           with an Arduino (closes #61)
         - fix incorrect RPi::Pin POD link in Core (closes #60)
+        - add blurb about disabling bluetooth when using serial (closes #57)
 
 2.3621  2017-10-03
         - removed the test/images and images/ directory from the repo
